--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.6-SNAPSHOT</version>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -59,8 +64,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
+			<version>4.13</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
