--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.6-SNAPSHOT</version>
+			</plugin>
 		</plugins>
 	</build>
 
